# ulist

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  api.html  benchmark.md  benchmark.rst  develop.md  develop.rst  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  test.py
.github/: extract_coverage.py
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  main.yml  publish.yml  sphinx.yml
_sources/: index.rst.txt
benchmark/: boolean.py  floating.py  integer.py  run.py  strings.py
docs/: CNAME  api.rst  conf.py  index.html  index.md  index.rst  run.sh
docs/html/ulist/: core.html
docs/source/: conf.py
requirements/: bench.txt  common.txt  cov.txt  dev.txt  doc.txt
tests/: check_version.sh  cov.py  main.py  run.sh  test.sh  test_base.py  test_boolean.py  test_constructor.py  test_constructors.py  test_control_flow.py  test_exceptions.py  test_index.py  test_inputs.py  test_integer.py  test_io.py  test_misc.py  test_numerical.py  test_string.py
tests/test_csv/: 00_test_int.csv  01_test_float.csv  02_test_bool.csv  03_test_string.csv  04_test_nan.csv
ulist/: Cargo.toml
ulist/python/ulist/: __init__.py  constructor.py  control_flow.py  core.py  io.py  mypy.ini  typedef.py  ulist.pyi  utils.py
ulist/src/: base.rs  boolean.rs  control_flow.rs  float.rs  index.rs  integer.rs  integer64.rs  io.rs  lib.rs  list.rs  non_float.rs  numerical.rs  string.rs  types.rs
ulist/src/floatings/: float32.rs  float64.rs  mod.rs
ulist/src/integer/: base.rs  int32.rs
ulist/src/integers/: int32.rs  int64.rs  mod.rs
