[package]
name = "ulist"
version = "0.9.0"
authors = ["tushushu"]
edition = "2018"

[lib]
name = "ulist"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use ulist;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16.1"
features = ["extension-module"]

[package.metadata.maturin]
python-source = "python"
