[package]
name = "ulist"
version = "0.11.0"
authors = ["tushushu"]
edition = "2018"

[lib]
name = "ulist"
crate-type = ["cdylib"]

[dependencies]
csv = "1.1"
ordered-float = "3.2.0"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[package.metadata.maturin]
python-source = "python"
